Fixed row-gap

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -297,6 +297,8 @@ footer
 
   .columns-2-1fr-1fr
     justify-content: flex-start
+    grid-gap: 96px
+
 
   .cta-area
     display: grid
